k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newspaper-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newspaper-frontend
  template:
    metadata:
      labels:
        app: newspaper-frontend
    spec:
      containers:
        - name: frontend
          image: kct_srs_newspaperproject-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
