k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newspaper-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: newspaper.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newspaper-frontend
                port:
                  number: 80
